--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/* TEST */
+
 
 body {
     width: 1000px;
@@ -8,11 +8,17 @@ body {
     background-color: rgb(0, 36, 92)
 
 }
+#full-header {
+    width: 1000px;
+    height: 80px;
+    margin-bottom: 15px;
+}
 #header-name {
     font-size: 40px;
     color: white;
     padding: 15px;
     margin: 0px 0px 0px 0px;
+    height: 80px;
  
 }
 .logo {
@@ -36,15 +42,29 @@ body {
     width: 700px;
     float: left;
     color: white;
-    margin: 10px 20px 10px 20px;
+    margin: 20px 0px 20px 0px;
 }
 #search {
     float: right;
+    padding: 5px;
+    margin: 16px 10px 0px 0px;
     
+}
+#recent-news {
+    float: right;
+    width: 300px;
+    margin: 20px 0px 20px 0px;
+}
+#recent-news > header {
+    margin-left: 5px;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 footer {
     width: 100%;
-    background-color: darkblue;
+    background-color: #00ff08;
     margin: 20px 0px 20px 0px;
     padding: 5px 0px 0px 0px;
     border-radius: 5px;
